[gd_scene load_steps=29 format=3 uid="uid://dwy36oubalf26"]

[ext_resource type="Script" uid="uid://dmopxi50jijau" path="res://src/phone/Phone.gd" id="1_q1yen"]
[ext_resource type="Texture2D" uid="uid://bj74nl6ua852s" path="res://data/wallpapers/phone_bg1.png" id="2_6ld0i"]
[ext_resource type="Shader" uid="uid://diq0ihx6ga3m2" path="res://src/phone/zoompan.gdshader" id="2_48j3f"]
[ext_resource type="PackedScene" uid="uid://tlo2xv2dxetl" path="res://src/phone/continue_app.tscn" id="3_01dmb"]
[ext_resource type="PackedScene" uid="uid://c8xq18q7uj5j2" path="res://src/phone/wallpaper_app.tscn" id="4_3pu3x"]
[ext_resource type="PackedScene" uid="uid://d3tjbs8klb0sh" path="res://src/phone/messages_app.tscn" id="4_y1f3a"]
[ext_resource type="Texture2D" uid="uid://dvx3qeunqppxd" path="res://data/assets/phone/art/wallpaper_app.png" id="5_6jmsr"]
[ext_resource type="Texture2D" uid="uid://bt4f3f3yxfiwx" path="res://data/assets/phone/art/wallpaper_app_hover.png" id="6_vx31v"]
[ext_resource type="PackedScene" uid="uid://bkpsqjmkwswtl" path="res://src/phone/RealDateApp.tscn" id="7_jpqjr"]
[ext_resource type="Texture2D" uid="uid://c00u2udwt85op" path="res://data/assets/phone/art/messages_app.png" id="7_v460n"]
[ext_resource type="Texture2D" uid="uid://wmudb2we7nh6" path="res://data/assets/phone/art/messages_app_hover.png" id="8_mpbrn"]
[ext_resource type="Texture2D" uid="uid://brbi5qeh3ul3v" path="res://data/assets/phone/art/continue_app_icon.png" id="9_n3gnc"]
[ext_resource type="Texture2D" uid="uid://cpcgxcx2qjflp" path="res://data/assets/phone/art/phone.png" id="9_ncvfr"]
[ext_resource type="Texture2D" uid="uid://ddf40plr2xwff" path="res://data/assets/phone/art/continue_app_icon_hover.png" id="10_3qafq"]
[ext_resource type="PackedScene" uid="uid://cqa2q3mwhscc2" path="res://src/phone/notification_icon.tscn" id="12_1ripe"]
[ext_resource type="Texture2D" uid="uid://bgdilt3xg8un0" path="res://data/assets/phone/art/realdate_icon.webp" id="14_7ay1n"]
[ext_resource type="Texture2D" uid="uid://77ulvh0rtc5h" path="res://data/assets/phone/art/realdate_icon_hover.webp" id="15_nwp6v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bugkw"]
shader = ExtResource("2_48j3f")
shader_parameter/zoom_speed = 0.2
shader_parameter/zoom_amount = 0.05
shader_parameter/pan_speed = 0.5
shader_parameter/pan_amount = 0.01

[sub_resource type="Animation" id="Animation_qrow7"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%WallpaperApp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-192, 1000)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%MessagesApp:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-192, 1000)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%ContinueApp:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-192, 1000)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("%RealDateApp:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-192, 1000)]
}

[sub_resource type="Animation" id="Animation_isnuj"]
resource_name = "continue_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%ContinueApp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-192, 1000), Vector2(-192, -59)]
}

[sub_resource type="Animation" id="Animation_djrv5"]
resource_name = "messages_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%MessagesApp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-192, 1000), Vector2(-192, -59)]
}

[sub_resource type="Animation" id="Animation_hqlyv"]
resource_name = "realdate_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%RealDateApp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-192, 1000), Vector2(-192, -59)]
}

[sub_resource type="Animation" id="Animation_k1jmu"]
resource_name = "wallpaper_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%WallpaperApp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-192, 1000), Vector2(-192, -59)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f4b01"]
_data = {
&"RESET": SubResource("Animation_qrow7"),
&"continue_up": SubResource("Animation_isnuj"),
&"messages_up": SubResource("Animation_djrv5"),
&"realdate_up": SubResource("Animation_hqlyv"),
&"wallpaper_up": SubResource("Animation_k1jmu")
}

[sub_resource type="Animation" id="Animation_dn530"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1199)]
}

[sub_resource type="Animation" id="Animation_fxeqe"]
resource_name = "icon_bounce_msgs"
length = 4.0

[sub_resource type="Animation" id="Animation_nvopj"]
resource_name = "phone_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 1199), Vector2(0, -39), Vector2(0, 8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_680p7"]
_data = {
&"RESET": SubResource("Animation_dn530"),
&"icon_bounce_msgs": SubResource("Animation_fxeqe"),
&"phone_up": SubResource("Animation_nvopj")
}

[node name="Phone" type="Node2D"]
position = Vector2(0, 1199)
script = ExtResource("1_q1yen")

[node name="PhoneBox" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 188.0
offset_top = 59.0
offset_right = 762.0
offset_bottom = 1086.0

[node name="Wallpaper" type="TextureRect" parent="PhoneBox"]
material = SubResource("ShaderMaterial_bugkw")
layout_mode = 0
offset_right = 574.0
offset_bottom = 1027.0
texture = ExtResource("2_6ld0i")
expand_mode = 1
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="ContinueApp" parent="PhoneBox" instance=ExtResource("3_01dmb")]
unique_name_in_owner = true
position = Vector2(-192, 1000)

[node name="MessagesApp" parent="PhoneBox" instance=ExtResource("4_y1f3a")]
unique_name_in_owner = true
position = Vector2(-192, 1000)

[node name="WallpaperApp" parent="PhoneBox" instance=ExtResource("4_3pu3x")]
unique_name_in_owner = true
position = Vector2(-192, 1000)

[node name="RealDateApp" parent="PhoneBox" instance=ExtResource("7_jpqjr")]
unique_name_in_owner = true
position = Vector2(-192, 1000)

[node name="Back" type="Button" parent="PhoneBox"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 25.0
offset_top = 38.0
offset_right = 126.0
offset_bottom = 85.0
text = "BACK"

[node name="WallpaperIcon" type="TextureButton" parent="PhoneBox" groups=["App"]]
layout_mode = 0
offset_left = 321.0
offset_top = 89.0
offset_right = 1040.0
offset_bottom = 813.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("5_6jmsr")
texture_hover = ExtResource("6_vx31v")
metadata/_edit_lock_ = true

[node name="MessagesIcon" type="TextureButton" parent="PhoneBox" groups=["App"]]
layout_mode = 0
offset_left = 49.0
offset_top = 89.0
offset_right = 768.0
offset_bottom = 813.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("7_v460n")
texture_hover = ExtResource("8_mpbrn")
metadata/_edit_lock_ = true

[node name="ContinueIcon" type="TextureButton" parent="PhoneBox" groups=["App"]]
layout_mode = 0
offset_left = 36.0
offset_top = 810.0
offset_right = 545.0
offset_bottom = 974.0
texture_normal = ExtResource("9_n3gnc")
texture_hover = ExtResource("10_3qafq")
ignore_texture_size = true
stretch_mode = 5

[node name="RealDateIcon" type="TextureButton" parent="PhoneBox" groups=["App"]]
layout_mode = 0
offset_left = 61.0
offset_top = 332.0
offset_right = 780.0
offset_bottom = 1056.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("14_7ay1n")
texture_hover = ExtResource("15_nwp6v")

[node name="NotificationIconEvents" parent="PhoneBox" instance=ExtResource("12_1ripe")]
position = Vector2(507, 810)

[node name="NotificationIconMessages" parent="PhoneBox" instance=ExtResource("12_1ripe")]
position = Vector2(225, 84)

[node name="AnimationPlayer" type="AnimationPlayer" parent="PhoneBox"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_f4b01")
}

[node name="PhoneOutline" type="TextureRect" parent="."]
offset_left = 165.0
offset_top = 34.0
offset_right = 791.0
offset_bottom = 1110.0
mouse_filter = 2
texture = ExtResource("9_ncvfr")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_680p7")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="selected" from="PhoneBox/ContinueApp" to="." method="_on_continue_app_selected"]
[connection signal="beginDialogue" from="PhoneBox/MessagesApp" to="." method="_on_messages_app_begin_dialogue"]
[connection signal="conversationComplete" from="PhoneBox/MessagesApp" to="." method="_on_messages_app_conversation_complete"]
[connection signal="newMessageSelect" from="PhoneBox/MessagesApp" to="." method="_on_messages_app_new_message_select"]
[connection signal="selected" from="PhoneBox/RealDateApp" to="." method="_on_realdate_app_selected"]
[connection signal="pressed" from="PhoneBox/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="PhoneBox/WallpaperIcon" to="." method="_on_wallpaper_icon_pressed"]
[connection signal="pressed" from="PhoneBox/MessagesIcon" to="." method="_on_messages_pressed"]
[connection signal="pressed" from="PhoneBox/ContinueIcon" to="." method="_on_continue_icon_pressed"]
[connection signal="pressed" from="PhoneBox/RealDateIcon" to="." method="_on_real_date_icon_pressed"]
